Fix width issue on mobile

--- a/src/patternlibrary/scss/components/HeaderV2.scss
+++ b/src/patternlibrary/scss/components/HeaderV2.scss
@@ -9,7 +9,7 @@
   height: 60px;
   display: flex;
   max-width: 90%;
-  min-width: 400px;
+  min-width: 320px;
   flex-flow: row wrap;
   margin: 0 auto 20px auto;
   box-sizing: border-box;
