--- a/src/patternlibrary/scss/components/MenuDropV2.scss
+++ b/src/patternlibrary/scss/components/MenuDropV2.scss
@@ -9,7 +9,6 @@ $mob-bar-width: 300px;
   right: 0;
   top: 0;
   z-index: 9;
-  margin-right: 10px;
 
   &.mnudrp-fullscreen {
     width: 100%;
@@ -22,7 +21,7 @@ $mob-bar-width: 300px;
     justify-content: flex-end;
     align-items: flex-start;
     height: 100%;
-    margin-right: 10px;
+    margin-right: 15px;
   }
 
   .mnudrp-desktop-deco {
